--- a/Projects/my times project/index.html
+++ b/Projects/my times project/index.html
@@ -1,9 +1,56 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" href="resources/css/style.css">
     <meta charset="utf-8">
-    <title></title>
+    <title>My Times</title>
   </head>
+
+
+  <div class="main"> <!..the main div opening..>
+
+    <div class="header">
+      <div class="logo">
+        <img src="resources/images/logo.jpg" alt="logo">
+      </div>
+      <h1 id="title">My Times</h1>
+      <div class="navigation">
+        <nav>
+          <span class="nav"><a href="">world</a></span>
+          <span class="nav"><a href="">U.S.</a></span>
+          <span class="nav"><a href="">Tech</a></span>
+          <span class="nav"><a href="">Science</a></span>
+        </nav>
+      </div>
+    </div>
+        <div class="column large">
+          <div class="lead-story">
+             <div class="image-content">
+               <span>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</span>
+             </div>
+             <p class="narrative">MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus, ac eleifend lacus
+                viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et, pellentesque
+                rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut
+                mauris. Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan. Etiam tempus, lorem quis blandit
+                imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum,
+                sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque. Nullam
+                sit amet fringilla massa.</p>
+          </div>
+          <div class="stories">
+            <div class="story">
+              <div class="text-content">
+                <h2>Orca Spends Vacation at Land World Puget</h2>
+                <p class="narrative">PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. 
+                  Sed congue odio vitae malesuada rhoncus.
+                  Integer vitae nisi pulvinar ante accumsan...</p>
+              </div>
+            </div>
+          </div>
+
+        </div>
+    </div>
+  </div><!..the main div closing..>
   <body>
 
   </body>
