--- a/Projects/my times project/index.html
+++ b/Projects/my times project/index.html
@@ -6,7 +6,7 @@
     <title>My Times</title>
   </head>
 
-
+  <body>
   <div class="main"> <!..the main div opening..>
 
     <div class="header">
@@ -14,15 +14,19 @@
         <img src="resources/images/logo.jpg" alt="logo">
       </div>
       <h1 id="title">My Times</h1>
-      <div class="navigation">
-        <nav>
-          <span class="nav"><a href="">world</a></span>
-          <span class="nav"><a href="">U.S.</a></span>
-          <span class="nav"><a href="">Tech</a></span>
-          <span class="nav"><a href="">Science</a></span>
-        </nav>
+      <div class="nav-control">
+        <div class="navigation">
+          <nav>
+            <span class="nav"><a href="">world</a></span>
+            <span class="nav"><a href="">U.S.</a></span>
+            <span class="nav"><a href="">Tech</a></span>
+            <span class="nav"><a href="">Science</a></span>
+          </nav>
+        </div>
       </div>
     </div>
+
+    <div class="column-control">
         <div class="column large">
           <div class="lead-story">
              <div class="image-content">
@@ -37,21 +41,88 @@
                 sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque. Nullam
                 sit amet fringilla massa.</p>
           </div>
+
           <div class="stories">
             <div class="story">
               <div class="text-content">
                 <h2>Orca Spends Vacation at Land World Puget</h2>
-                <p class="narrative">PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. 
+                <p class="narrative">PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus.
                   Sed congue odio vitae malesuada rhoncus.
                   Integer vitae nisi pulvinar ante accumsan...</p>
+              </div>
+              <div class="fall-cancelled image-content">
+                <span>Earth Spins Backwards For 2017</span>
+              </div>
+            </div>
+              <div class="story">
+                <div class="text-content">
+                  <h2>Burger For Breakfast: How Early is too Early?</h2>
+                  <p class="narrative">Mew York, MY—Interdum et malesuada fames
+                    ac ante ipsum primis in faucibus. Pellentesque id quam facilisis,
+                    ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
+                </div>
+                <div class="pop-culture image-content">
+                  <span>Research show Cameras Erase Memory</span>
+                </div>
               </div>
             </div>
           </div>
 
-        </div>
-    </div>
-  </div><!..the main div closing..>
-  <body>
 
+          <div class="column medium">
+            <div class="story">
+              <div class="text-content">
+                <h2>FBI Finds Action Star Guilty of False Advertising</h2>
+                <p class="narrative">
+            WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae
+             aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed. Morbi venenatis
+             condimentum sem, vitae sollicitudin turpis pulvinar eget. Morbi pellentesque consectetur
+              mi id auctor. Phasellus tincidunt orci mauris, placerat pharetra urna fringilla vitae.
+              Morbi eget rutrum urna. Cras condimentum augue ut ante sollicitudin interdum. Pellentesque
+              cursus dolor at tincidunt cursus. Vestibulum blandit aliquam felis...</p>
+              </div>
+            </div>
+            <div class="white-cat image-content">
+              <span>Cats in control-Is that a thing?</span>
+            </div>
+            <div class="story">
+              <p>BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta
+              aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque.
+              Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a
+              vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor, quis commodo tellus
+              pellentesque in.</p>
+            </div>
+          </div>
+
+          <div class="column small">
+            <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-news-bite.png" alt="cookie photo">
+            <div class="news-bites">
+            <h3>NEWS BITES</h3>
+              <span>Cat Emoji Goes Viral</span>
+              <span>Buy Youtube Views</span>
+              <span>Home Business Advertising Ideas</span>
+              <span>Advertising Internet Online</span>
+              <span>Illustration in Marketing Materials</span>
+              <span>Finally a Top Secret Way You Can</span>
+            </div>
+          </div>
+        </div>
+        <footer class="footer">
+          <div class="info">
+            <span><a class="title">MY Times</a></span>
+            <nav>
+              <span><a href="#">World</a></span>
+              <span><a href="#">U.S.</a></span>
+              <span><a href="#">Tech</a></span>
+              <span><a href="#">Science</a></span>
+            </nav>
+          </div>
+          <div class="copyright">
+      © 2016, My Times (A Division of Codecademy bite)
+          </div>
+        </footer>
+
+
+  </div><!..the main div closing..>
   </body>
 </html>
